<resources>
    <string name="app_name">Pizza Party</string>
    <string name="number_of_people">Number of people?</string>
    <string name="attendee_hunger">How hungry?</string>
    <string name="total_pizzas">Total pizzas: ?</string>
    <string name="calculate">Calculate</string>
    <string name="hunger_type_light">Light</string>
    <string name="hunger_type_medium">Medium</string>
    <string name="hunger_type_ravenous">Ravenous</string>
</resources>