<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizza_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:backgroundTint="#00E91E63"
        android:labelFor="@id/num_attend_edit_text"
        android:shadowColor="@color/black"
        android:text="@string/number_of_people"
        android:textColor="@color/black"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="156dp"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="138dp"
        android:labelFor="@id/hungry_radio_group"
        android:text="@string/attendee_hunger"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:text="@string/total_pizzas"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/calc_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group"
        app:layout_constraintVertical_bias="0.725" />

    <Button
        android:id="@+id/calc_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="220dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="calculateClick"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="126dp"
        android:layout_height="144dp"
        android:layout_marginBottom="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hunger_type_light" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hunger_type_medium" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hunger_type_ravenous" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>